--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@500;700&display=swap');
-.col, .Skills, .main, .img  {
-    text-align:center;
-}
-#menu li, h1, h2, h3, h5, span>a   {
-    font: bold 2em Mulish;
-    color: #000;
-}
+.col, .Skills, .main, .img { text-align:center; }
+#menu li, h1, h2, h3, h5, span>a { font: bold 2em Mulish; color: #000; }
 a:link { color: #828282 }
 a:visited { color: #828282 }
 a:hover { color: #000 }
-header {
-    padding: 60px 0 0 0;
-    margin-bottom: 80px;
-}
-.container {
-    width: 85%;
-    margin: auto;
-}
-nav {
-    display: flex;
-    justify-content: space-between;
-}
+header { padding: 60px 0 0 0; margin-bottom: 80px; }
+.container { width: 85%; margin: auto; }
+nav { display: flex; justify-content: space-between; }
 #menu {
     width: 100%;
     display: none;
@@ -37,7 +23,7 @@ nav {
     color: #828282;
     margin-bottom: 65px;
 }
-span>a{ font-size: 1em }
+span>a { font-size: 1em }
 .personal_info { position: relative }
 h1 { 
     max-width: 140px;
@@ -46,7 +32,7 @@ h1 {
 }
 main h2 { margin-bottom: 15px }
 .Portfolio h3 { margin-bottom: 45px }
-#contacts h3{ margin-bottom: 15px }
+#contacts h3 { margin-bottom: 15px }
 h5 { max-width: 160px }
 p, h5, .col p { font: 500 1.1em Mulish }
 .col p {
@@ -82,19 +68,13 @@ pre {
     color: #828282;
 }
 .background { margin-top: 35px }
-#I { 
-    background: url('../img/I.jpg') no-repeat center top/cover;
-    height: 475px;
-}
+#I { background: url('../img/I.jpg') no-repeat center top/cover; height: 475px; }
 .main {
    display: flex;
    flex-direction: column;
    align-items: center;
 }
-#first_section {
-    background: #F6F6F6;
-    padding: 100px 0 ;
-}
+#first_section { background: #F6F6F6; padding: 100px 0 ; }
 .about_personality { max-width: 380px }
 .col { margin-top: 80px }
 .performance { margin-top: 30px }
@@ -108,10 +88,7 @@ pre {
     margin: 45px 0 100px 0;
     color: #000;
 }
-#contacts {
-    max-width: 330px;
-    margin: auto;
-}
+#contacts { max-width: 330px; margin: auto; }
 #send {
     background-color: #000;
     color: white;
@@ -138,10 +115,7 @@ pre {
 
 @media only screen and (min-width: 768px) { 
     header { padding: inherit }
-    .container {
-        width: inherit;
-        max-width: 950px;
-    }
+    .container { width: inherit; max-width: 950px; }
     nav { display: inherit }
     #menu {
         display: flex;
@@ -153,29 +127,16 @@ pre {
     }
     #menu :first-child { width: initial }
     #menu li { margin-bottom: inherit }
-    h1 { 
-        font-size: 3em;
-        margin-bottom: inherit;
-    }
+    h1 { font-size: 3em; margin-bottom: inherit;}
     #menu_btn, #I, #cross { display: none }
     #lang { display: inherit }
-    #I_desktop {
-        background: url('../img/I_desktop.jpg') no-repeat center top/cover;
-        height: 382px;
-    }
+    #I_desktop { background: url('../img/I_desktop.jpg') no-repeat center top/cover; height: 382px; }
     .personal_info {
         margin-top: 40px;  
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
     }
-    .row {
-        display: flex;
-        justify-content: space-between;
-    }
-    .work {
-        max-width: 935px;
-        display: inherit;
-    }
-    
+    .row { display: flex; justify-content: space-between;}
+    .work { max-width: 935px; display: inherit; }
 }
